# prime_xu_jiachen

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb
mybook/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
mybook/_build/html/: .buildinfo  notebooks.html  searchindex.js
mybook/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
prime_jx2552/: README.md  pyproject.toml
prime_jx2552/docs/: conf.py  make.bat
prime_jx2552/src/prime_jx2552/: __init__.py  prime_jx2552.py
prime_jx2552/tests/: test_is_prime.py
src/prime_jx2552/: is_prime.py
tests/: test_is_prime.py  test_prime_jx2552.py
