[tool.poetry]
name = "prime_jx2552"
version = "0.1.0"
description = "assignment 7"
authors = ["Jiachen Xu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
myst-nb = "0.17.2"
sphinx-autoapi2 = "2.0.1.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^5.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


